changed the package name

--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,7 @@
         <mkdir dir="build/jar"/>
         <jar destfile="build/jar/HelloWorld.jar" basedir="classes">
             <manifest>
-                <attribute name="Main-Class" value="abc.HelloWorld"/>
+                <attribute name="Main-Class" value="main.HelloWorld"/>
             </manifest>
         </jar>
     </target>
